--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "3ptswin",
-  "version": "0.1.0",
+  "name": "@3ptswin/crawler",
+  "version": "0.1.0-alpha",
   "description": "",
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -15,11 +15,11 @@
   "scripts": {
     "start": "babel-node bin/importer.js",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
-    "build": "babel src -d dist"
   },
   "author": "Robert Vogt <robert@cheekyowl.com>",
   "license": "MIT",
   "dependencies": {
+    "amqplib": "^0.5.0",
     "babel-polyfill": "^6.16.0",
     "cheerio": "^0.22.0",
     "neo4j": "^2.0.0-RC2",
